--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<div id="main">
 		<div id="wrap">
 			<audio id="music" autoplay="autopaly" loop="loop">
-				<source src="music/Hay Cho Anh Ngo Loi - Mai Tien Dung.mp3" type="audio/mp3" />
-				<source src="music/Hay-Cho-Anh-Ngo-Loi-Mai-Tien-Dung.ogg" type="audio/ogg" />
+				<source src="music/WayBackHomeLoiViet-HuyVac-5559988.mp3" type="audio/mp3" />
+				<source src="music/WayBackHomeLoiViet-HuyVac-5559988.ogg" type="audio/ogg" />
 			</audio>
 			<div id="text">
 				<span class="title">Lời tỏ tình của chàng trai nghành IT</span><br />
