--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div id="copyright">
 			Inspired by <a href="https://blog.csdn.net/lisenyang/article/details/35220823">Love tree concept on lisenyang blog</a> ||
 			re-created and localized by
-			<a href='https://www.facebook.com/phat.x.luong/'>Phat.X.luong</a>
+			<a href='https://www.facebook.com/buongduocrui/'>Hieu Nguyen</a>
 		</div>
 	</div>
 
