--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
 			</div>
 			<div id="animationWindow" class="display"></div> 
 			<div class="btn-wrap display static"
-				onclick="alert ('Em gửi feedback lại cho anh nhé? Sẵn tiện em thích đi ăn quán nào?');">
+				onclick="alert ('Tuyệt vời quá tui có ny rùi');">
 				<a href="https://m.me/phat.x.luong/" class="btn" title="Yes">
 					<span> "Ok em chịu nà" <br><i class="fa fa-heart"></i></span>
 				</a>
 			</div>
 
 			<div class="btn-wrap display tricky"
-				onclick="alert ('Làm gì dữ vậy bà! Xí...');alert ('Hận đàn bà, anh đi tu quách');openYT();">
+				onclick="alert ('Làm gì dữ vậy bà! Xí...');alert ('buồn cậu ghê,tủi thân khóc :(((');openYT();">
 				<a class="btn" title="No">
 					<span>"Điên à! Cút Đi" <br><i class="fa fa-heart-broken"></i></span>
 				</a>
 			</div>
 
-			<canvas id="canvas" width="1100" height="680"></canvas>
+			<canvas id="canvas" width="1100" height="900"></canvas>
 		</div>
 		<div id="copyright">
 			Inspired by <a href="https://blog.csdn.net/lisenyang/article/details/35220823">Love tree concept on lisenyang blog</a> ||
