--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div id="animationWindow" class="display"></div> 
 			<div class="btn-wrap display static"
 				onclick="alert ('Tuyệt vời quá tui có ny rùi');">
-				<a href="https://m.me/phat.x.luong/" class="btn" title="Yes">
+				<a href="https://m.me/buongduocrui/" class="btn" title="Yes">
 					<span> "Ok em chịu nà" <br><i class="fa fa-heart"></i></span>
 				</a>
 			</div>
