--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			</div>
 			<div id="animationWindow" class="display"></div> 
 			<div class="btn-wrap display static"
-				onclick="alert ('Tuyệt vời quá tui có ny rùi');">
+				onclick="alert ('Tuyệt vời quá tui có ny rùi.Nhấn ok liên lạc với tui đi');">
 				<a href="https://m.me/buongduocrui/" class="btn" title="Yes">
 					<span> "Ok em chịu nà" <br><i class="fa fa-heart"></i></span>
 				</a>
