--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<span class="title">Lời tỏ tình của chàng trai nghành IT</span><br />
 				<br />
 				<br />
-				<span class="strong">Nếu một ngày Windows em báo lỗi </span><br />
+				<span class="strong">Nếu một ngày Windows em báo lỗi........................................................................................................................................................ </span><br />
 				<span class="say">Anh nguyện làm các Soft test đơn phương.</span><br />
 				<span class="seperate"></span><br />
 				<span class="strong">Từng Sector anh đi khắp nẻo đường</span><br />
@@ -64,21 +64,7 @@
 				<span class="seperate"></span><br />
 				<span class="strong">PS: Nhấn nút accept làm bạn anh nhé?</span><br />
 				<span class="seperate"></span><br />
-			</div>
-			<div id="animationWindow" class="display"></div> 
-			<div class="btn-wrap display static"
-				onclick="alert ('Tuyệt vời quá tui có ny rùi.Nhấn ok liên lạc với tui đi');">
-				<a href="https://m.me/buongduocrui/" class="btn" title="Yes">
-					<span> "Ok em chịu nà" <br><i class="fa fa-heart"></i></span>
-				</a>
-			</div>
-
-			<div class="btn-wrap display tricky"
-				onclick="alert ('Làm gì dữ vậy bà! Xí...');alert ('buồn cậu ghê,tủi thân khóc :(((');openYT();">
-				<a class="btn" title="No">
-					<span>"Điên à! Cút Đi" <br><i class="fa fa-heart-broken"></i></span>
-				</a>
-			</div>
+			
 
 			<canvas id="canvas" width="1100" height="900"></canvas>
 		</div>
