--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<div id="main">
 		<div id="wrap">
 			<audio id="music" autoplay="autopaly" loop="loop">
-				<source src="music/Hay Cho Anh Ngo Loi - Mai Tien Dung.mp3" type="audio/mp3" />
-				<source src="music/Hay-Cho-Anh-Ngo-Loi-Mai-Tien-Dung.ogg" type="audio/ogg" />
+				<source src="music/EmBangQua-NguyenTanDatDK-6750985.mp3" type="audio/mp3" />
+				<source src="music/EmBangQua-NguyenTanDatDK-6750985.ogg" type="audio/ogg" />
 			</audio>
 			<div id="text">
 				<span class="title">Lời tỏ tình của chàng trai nghành IT</span><br />
@@ -67,8 +67,8 @@
 			</div>
 			<div id="animationWindow" class="display"></div> 
 			<div class="btn-wrap display static"
-				onclick="alert ('Em gửi feedback lại cho anh nhé? Sẵn tiện em thích đi ăn quán nào?');">
-				<a href="https://m.me/phat.x.luong/" class="btn" title="Yes">
+				onclick="alert ('Em gửi feedback lại cho anh nhé? yêu em <3');">
+				<a href="https://m.me/buongduocrui/" class="btn" title="Yes">
 					<span> "Ok em chịu nà" <br><i class="fa fa-heart"></i></span>
 				</a>
 			</div>
@@ -85,7 +85,7 @@
 		<div id="copyright">
 			Inspired by <a href="https://blog.csdn.net/lisenyang/article/details/35220823">Love tree concept on lisenyang blog</a> ||
 			re-created and localized by
-			<a href='https://www.facebook.com/phat.x.luong/'>Phat.X.luong</a>
+			<a href='https://www.facebook.com/buongduocrui/'>Nguyen Hieu</a>
 		</div>
 	</div>
 
